# c-project-planning-letitiamucenicu

./: CMakeLists.txt  notes
data/: op_details.txt
include/: Appointment.h  Operation.h  Scheduler.h
src/: Scheduler.cpp  admin_main.cpp  user_main.cpp
